crates/cuda-device/tests/compile_fail/thread_index_1d32_uncontracted.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/thread_index_1d32_uncontracted.rs:15:36
   |
15 |     let _ = __internal::index_1d32(scope);
   |             ---------------------- ^^^^^ expected `&KernelScope<'_, Domain1, ...>`, found `&KernelScope<'_>`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected reference `&cuda_device::KernelScope<'_, cuda_device::__internal::Domain1, cuda_device::__internal::U32Coordinates>`
              found reference `&'kernel cuda_device::KernelScope<'kernel, cuda_device::__internal::UnknownDomain, cuda_device::__internal::NativeCoordinates>`
note: function defined here
  --> src/thread.rs
   |
   |     pub fn index_1d32<'kernel>(
   |            ^^^^^^^^^^
